Fix fullscreen button not reappearing on mobile.

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -17,8 +17,8 @@
   position: absolute;
   width: 100px;
   height: 100px;
-  left: 25px;
-  bottom: 25px;
+  left: 70px;
+  bottom: 70px;
   background: rgba(141, 140, 140, 0.562);
   border-radius: 75px;
   pointer-events: all;
